--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>This my second repo</h2>
-    <h2>This is my commit</h2>
+    <p>This is my commit</p>
 </body>
 </html>
